Record fields in original order